[Duy An] - [Add[: Add field in search engine